Implémentation de l'accéléromètre + déplacement du joueur avec accéléro

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,13 @@ platform = ststm32
 board = disco_f746ng
 framework = mbed
 lib_deps = 
+	Wire
 	https://github.com/lvgl/lvgl.git#v8.3.4
 	BSP_DISCO_F746NG
 	sdmmc
 	threadLvgl
 	mesFonts
-monitor_speed = 9600
+monitor_speed = 115200
 extra_scripts = pre:mbedignore.py
 build_flags = 
 	-D USE_HAL_LTDC_REGISTER_CALLBACKS
